# YC-Assembly

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: Procfile  alembic.ini  pyproject.toml  railway.toml
apps/api/_audit/: PHASE_10A_2_OPERATOR_REPORT.md  PHASE_10A_3_FINAL_VERIFICATION.md  PHASE_10A_3_OPERATOR_REPORT.md  PHASE_10B_1_OPERATOR_REPORT.md  PHASE_10B_2_OPERATOR_REPORT.md  PHASE_10B_3_OPERATOR_REPORT.md  PHASE_10B_4_OPERATOR_REPORT.md  PHASE_10B_5_OPERATOR_REPORT.md  PHASE_10B_OPERATOR_REPORT.md  amazon_reviews_2023_preflight_8_5a.json  amazon_reviews_2023_preflight_8_5b.json  amazon_reviews_2023_preflight_8_5b_1_dynamic.json  amazon_reviews_2023_preflight_8_5b_2_solara_beauty.json  audience_retrieval_amboras.json  audience_retrieval_halal_financing.json  audience_retrieval_iphone_17.json  audience_retrieval_water_bottle_california.json  brave_preflight_8_5a.json  cohort_architecture_9d.json  cohort_architecture_9d_quality.json  compressor_hard_cap_9a_2.json  db_delta_audit_8_5b_3.json  discussion_layer_9a_4.json  discussion_layer_9a_4_quality.json  firecrawl_evidence_mapping_dry_run.json  firecrawl_live_smoke_v1.json  firecrawl_live_smoke_v1_run1.json  fresh_end_to_end_lumaloop_8_5g.json  fresh_end_to_end_lumaloop_8_5g_1.json  fresh_end_to_end_lumaloop_8_5g_1_quality.json  fresh_product_persona_diversity_fix_8_5d_1c.json  fresh_product_persona_generalization_dry_run_8_5d_1b.json  fresh_product_source_expansion_dry_run_8_5d_1d.json  lumaloop_50_100_discussion_report_9b.json  lumaloop_50_100_discussion_report_9b.md  lumaloop_50_100_discussion_report_9b_1.json  lumaloop_50_100_discussion_report_9b_1.md  (+68 more)
(+912 files in other folders)
