[project]
name = "assembly-api"
version = "0.1.0"
description = "Assembly synthetic market-reaction infrastructure (V0)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pgvector>=0.3.6",
    "anthropic>=0.40",
    "openai>=1.55",
    "instructor>=1.6",
    "arq>=0.26",
    "redis>=5.2",
    "structlog>=24.4",
    "httpx>=0.27",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx>=0.27",
    "freezegun>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assembly"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
# Default deselects `integration` so plain `pytest` runs only unit tests.
# Run integration with: `pytest -m integration` (requires Postgres + Redis).
addopts = "-m 'not integration'"
markers = [
    "integration: requires live Postgres / Redis. Run with `pytest -m integration`.",
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
